--- a/html/syllabi/race_slavery_empire.html
+++ b/html/syllabi/race_slavery_empire.html
@@ -64,7 +64,7 @@
 					<ol class="menu">
 						<li><a href="#overview">Syllabus Overview</a></li>
 						<li><a href="#works-cited">Works Cited</a></li>
-						<li><a href="#series"> Series</a></li>
+						<li><a href="#series">Centering Black Studies Series</a></li>
 						<li><a href="#biography">Developer Biography</a></li>
 						<li><a href="#caption">Header Image Caption</a></li>
 						<li><a href="#citation">Page/Syllabus Citation (MLA)</a></li>
