--- a/404.html
+++ b/404.html
@@ -44,13 +44,13 @@
 				</div>
 
 				<section>
-					<p class="largest"><strong>Eek! Page not found!</strong></p>
+					<p class="large"><strong>Eek! Page not found!</strong></p>
 					<p>Get some help:</p> 
 					<a class="link404" href="/sitemap.html">Site Map</a>
 					<p>(Also see the links at top.)</p>
 				</section>
 
-				<hr/>
+				<hr class="hr404"/>
 
 				<section aria-labelledby="caption">
 					<h3 id="caption">Header Image Caption</h3>
