--- a/sitemap.html
+++ b/sitemap.html
@@ -143,8 +143,8 @@
 								<li><a href="/html/about/values_practices.html">Values and Practices</a></li>
 								<li><a href="/html/about/bibliography.html">Bibliography</a></li>
 								<li><a href="/html/about/call_for_syllabi_and_syllabus_clusters.html">Call for Syllabi and Syllabus Clusters (Open)</a></li>
-								<li><a href="/html/about/call_for_assistant_editors_2022.html">Call for Assistant Editors (2022)</a></li>
-								<li><a href="/html/about/call_for_assessments_2022.html">Call for Assessments (2022)</a></li>
+								<!-- <li><a href="/html/about/call_for_assistant_editors_2022.html">Call for Assistant Editors (2022)</a></li> -->
+								<!-- <li><a href="/html/about/call_for_assessments_2022.html">Call for Assessments (2022)</a></li> -->
 							</ol>
 						</li>
 					
