--- a/html/lesson_plans/africa_ethiopianism.html
+++ b/html/lesson_plans/africa_ethiopianism.html
@@ -95,8 +95,11 @@
 						<p>Booth, Joseph. <a aria-label="External Link" href="http://babel.hathitrust.org/cgi/pt?id=ien.35556012349940&view=1up&seq=3"><em>Africa for the African</em></a>. n.p., 1897.<br/>
 							<span class="annotation">A white English missionary who spent significant time in New Zealand, Australia, and Africa (and also traveled to the United States), Booth supported African self-rule and urged Black Americans to help bring that about. He directly influenced  John Chilembwe, who organized, and died in, a 1915 rebellion against British colonial rule in Nyasaland (modern-day Malawi).</span></p>
 							
-						<p>Turner, Henry McNeal. “Emigration.” 1 Apr. 1900. <em>Black Nationalism in America</em>, edited by John H. Bracey et al., Bobbs-Merrill, 1970, p. 176.<br/>
-						---. “The Negro Has Not Sense Enough.” 1 July 1900. <em>Black Nationalism in America</em>, edited by John H. Bracey et al., Bobbs-Merrill, 1970, pp. 172–75.<br/>
+						<p>
+							<ul class="text-list">
+								<li>Turner, Henry McNeal. “Emigration.” 1 Apr. 1900. <em>Black Nationalism in America</em>, edited by John H. Bracey et al., Bobbs-Merrill, 1970, p. 176.</li>
+								<li>---. “The Negro Has Not Sense Enough.” 1 July 1900. <em>Black Nationalism in America</em>, edited by John H. Bracey et al., Bobbs-Merrill, 1970, pp. 172–75.</li>
+							</ul>
 							<span class="annotation">Born to free Black parents in South Carolina in 1834, Turner was an advocate of social justice, a minister in the African Methodist Episcopal Church, an advocate of Black religious independence (from white churches), and a strong proponent of Black emigration to Africa. In these two editorials in <em>Voice of Missions</em>, which he founded, Turner chastises his fellow Black Americans for their failure to see that Africa “is the one place that offers us manhood and freedom” (173).</span></p>
 
 						<p>Jones, Roderick. “<a aria-label="External Link" href="https://babel.hathitrust.org/cgi/pt?id=uc1.b000573736&view=1up&seq=724&q1=%22black%20peril%22">The Black Peril in South Africa</a>.” <em>The Nineteenth Century and After</em>, vol. 55, no. 327, May 1904, pp. 712–33.<br/>
