--- a/404.html
+++ b/404.html
@@ -47,7 +47,7 @@
 					<p class="large"><strong>Eek! Page not found!</strong></p>
 					<p>Get some help:</p> 
 					<a class="link404" href="/sitemap.html">Site Map</a>
-					<p>(Also see the links at top.)</p>
+					<p>(Also see the menu/links at top.)</p>
 				</section>
 
 				<hr class="hr404"/>
