--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
 				<section class="small" aria-labelledby="citation">
 					<h2 id="citation">Project/Page Citation (MLA)</h2>
-					<p>Pearl Chaozon Bauer, Ryan D. Fong, Sophia Hsu, and Adrian S. Wisnicki, founding dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/" class="cite-link">https://undiscipliningvc.org</a>.</p>
+					<p>Pearl Chaozon Bauer, Ryan D. Fong, Sophia Hsu, and Adrian S. Wisnicki, founding dev. <em>Undisciplining the Victorian Classroom</em>, 2021-23, <a href="/" class="cite-link">https://undiscipliningvc.org</a>.</p>
 				</section>
 			</main>
 			
