--- a/html/about/call_for_assistant_editors_2022.html
+++ b/html/about/call_for_assistant_editors_2022.html
@@ -76,7 +76,7 @@
 			// Includes HTML snippets; adapted from https://stackoverflow.com/a/31837264
 			$(function(){var includes=$('[data-include]');jQuery.each(includes,function(){var file='/common/'+$(this).data('include')+'.html?=newVers_0004';$(this).load(file)})});
 			// Loads JS file only after rest of page has loaded; adapted from https://learn.jquery.com/using-jquery-core/document-ready/ and https://stackoverflow.com/a/39179486
-			$(window).on("load",function(){var element=document.createElement("script");element.src="/js/scripts.js?=newVers_0004";document.body.appendChild(element);var element=document.createElement("script");element.src="/js/youtube.js?=newVers_0002";document.body.appendChild(element)});			
+			$(document).ready(function(){var element=document.createElement("script");element.src="/js/scripts.js?=newVers_0004";document.body.appendChild(element)});
 		</script>		
 	</body>
 </html>
