--- a/py/assessment-template-1.html
+++ b/py/assessment-template-1.html
@@ -23,7 +23,7 @@
 	<!-- HTML code in this file adapted from Adrian S. Wisnicki's One More Voice website (https://onemorevoice.org/); released under a Creative Commons Attribution-NonCommercial 4.0 International (CC BY-NC 4.0) license (https://creativecommons.org/licenses/by-nc/4.0/). -->
 
 	<body class="essay">
-		<div class="text-container content syllabi">
+		<div class="text-container content assessmemts">
 
 			<div data-include="nav">
 				<nav id="fallback-nav">
@@ -39,7 +39,7 @@
 			<main id="main" aria-labelledby="assessmemt">
 				<h2 id="assessmemt">{title}</h2><!-- Change -->
 					<div class="aspect-ratio-box">
-          	<img src="/img/syllabi/uvc_{image-no}-1800px.jpg" srcset="/img/syllabi/uvc_{image-no}-1800px.jpg 1800w, /img/syllabi/uvc_{image-no}-1650px.jpg 1650w, /img/syllabi/uvc_{image-no}-1500px.jpg 1500w, /img/syllabi/uvc_{image-no}-1350px.jpg 1350w, /img/syllabi/uvc_{image-no}-1200px.jpg 1200w, /img/syllabi/uvc_{image-no}-1050px.jpg 1050w, /img/syllabi/uvc_{image-no}-900px.jpg 900w, /img/syllabi/uvc_{image-no}-750px.jpg 750w, /img/syllabi/uvc_{image-no}-600px.jpg 600w, /img/syllabi/uvc_{image-no}-450px.jpg 450w, /img/syllabi/uvc_{image-no}-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="{alt}" title="{image-title}"/><!-- Change -->
+          	<img src="/img/assessmemts/uvc_{image-no}-1800px.jpg" srcset="/img/assessmemts/uvc_{image-no}-1800px.jpg 1800w, /img/assessmemts/uvc_{image-no}-1650px.jpg 1650w, /img/assessmemts/uvc_{image-no}-1500px.jpg 1500w, /img/assessmemts/uvc_{image-no}-1350px.jpg 1350w, /img/assessmemts/uvc_{image-no}-1200px.jpg 1200w, /img/assessmemts/uvc_{image-no}-1050px.jpg 1050w, /img/assessmemts/uvc_{image-no}-900px.jpg 900w, /img/assessmemts/uvc_{image-no}-750px.jpg 750w, /img/assessmemts/uvc_{image-no}-600px.jpg 600w, /img/assessmemts/uvc_{image-no}-450px.jpg 450w, /img/assessmemts/uvc_{image-no}-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="{alt}" title="{image-title}"/><!-- Change -->
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
 				</div>
 
@@ -80,7 +80,7 @@
 				<section aria-labelledby="overview">
 					<h3 id="overview">Assessmemt Overview</h3>
 
-					<p><i class="fa fa-arrow-right fa-fw" aria-hidden="true"></i> Download the peer-reviewed assessmemt: &nbsp;<a href="/pdf/syllabi/{assessmemt-file-name}.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/syllabi/{assessmemt-file-name}.docx"  title="This link opens a Word document.">Word</a></p><!-- Change -->
+					<p><i class="fa fa-arrow-right fa-fw" aria-hidden="true"></i> Download the peer-reviewed assessmemt: &nbsp;<a href="/pdf/assessmemts/{assessmemt-file-name}.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/assessmemts/{assessmemt-file-name}.docx"  title="This link opens a Word document.">Word</a></p><!-- Change -->
 				
 					{assessmemt-overview}
 				</section>
@@ -111,7 +111,7 @@
 				
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page/Assessmemt Citation (MLA)</h3>
-					<p>{developer}, dev. “{title}.” {peer-reviewer}, peer rev.; {assessmemt-cluster-dev}, assessmemt cluster dev. <em>Undisciplining the Victorian Classroom</em>, {publication-date-year}, <a href="/html/syllabi/{assessmemt-webpage-name}.html" class="cite-link">https://undiscipliningvc.org/html/syllabi/{assessmemt-webpage-name}.html</a>.</p><!-- Change -->
+					<p>{developer}, dev. “{title}.” {peer-reviewer}, peer rev.; {assessmemt-cluster-dev}, assessmemt cluster dev. <em>Undisciplining the Victorian Classroom</em>, {publication-date-year}, <a href="/html/assessmemts/{assessmemt-webpage-name}.html" class="cite-link">https://undiscipliningvc.org/html/assessmemts/{assessmemt-webpage-name}.html</a>.</p><!-- Change -->
 				</section>
 			</main>
 			
