--- a/py/assessment-template-1.html
+++ b/py/assessment-template-1.html
@@ -110,7 +110,7 @@
 				</section>
 				
 				<section class="small" aria-labelledby="citation">
-					<h3 id="citation">Page/assessment Citation (MLA)</h3>
+					<h3 id="citation">Page/Assessment Citation (MLA)</h3>
 					<p>{developer}, dev. “{title}.” {peer-reviewer}, peer rev.; {assessment-cluster-dev}, assessment cluster dev. <em>Undisciplining the Victorian Classroom</em>, {publication-date-year}, <a href="/html/assessments/{assessment-webpage-name}.html" class="cite-link">https://undiscipliningvc.org/html/assessments/{assessment-webpage-name}.html</a>.</p><!-- Change -->
 				</section>
 			</main>
