--- a/html/assessments.html
+++ b/html/assessments.html
@@ -7,29 +7,26 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
 		<meta name="theme-color" content="#395375"/>
-		<link rel="apple-touch-icon" sizes="180x180" href="/img/icons/apple-touch-icon.png"/>
-		<link rel="icon" type="image/png" sizes="32x32" href="/img/icons/favicon-32x32.png"/>
 		<link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png"/>
+		<link rel="icon" type="image/png" sizes="32x32" href="/img/icons/favicon-32x32.png"/>
+		<link rel="apple-touch-icon" sizes="180x180" href="/img/icons/apple-touch-icon.png"/>
 		<link rel="manifest" href="/site.webmanifest"/>
 		<link rel="preconnect" href="https://fonts.googleapis.com"/>
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin=""/> 
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&family=Source+Sans+Pro:wght@400;600;700&display=swap"/> 
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Source+Serif+Pro:wght@400;600;700&family=Source+Sans+Pro:wght@400;600;700&display=swap"/> 
 		<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.2.0/css/fork-awesome.min.css" integrity="sha256-XoaMnoYC5TH6/+ihMEnospgm0J1PM/nioxbOUdnM8HY=" crossorigin="anonymous" referrerpolicy="no-referrer"/>
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous"/>
+		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous"  referrerpolicy="no-referrer"/>
 		<link rel="stylesheet" type="text/css" href="/css/style.css?=newVers_0007"/>
 		<link rel="stylesheet" type="text/css" href="/css/cluster.css?=newVers_0005"/>
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-31768072-6"></script>
-		<script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date());gtag('config','UA-31768072-6');</script>
 	</head>
 
 	<!-- HTML code in this file adapted from Adrian S. Wisnicki's One More Voice website (https://onemorevoice.org/); released under a Creative Commons Attribution-NonCommercial 4.0 International (CC BY-NC 4.0) license (https://creativecommons.org/licenses/by-nc/4.0/). -->
-	<!-- Informed throughout by https://w3c.github.io/aria-practices/examples/ -->
 
 	<body class="essay">
 		<div class="text-container cluster assessments">
 
 			<div data-include="nav">
-				<nav id="navFB">
+				<nav id="fallback-nav">
 					<ul role="menubar" aria-label="Site sections">
 						<li role="none"><a role="menuitem" aria-haspopup="false" href="/index.html"><h1>Undisciplining the Victorian Classroom</h1></a></li>
 						<li role="none"><button title="Menu" aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
@@ -52,22 +49,20 @@
 					<h2 id=""></h2><!-- Update. We need a title here.-->
 					<div><a href="/html/assessments/XXX.html"><img loading="lazy" src="/img/assessments/tiles/uvc_YYYY-1324px.jpg" srcset="/img/assessments/tiles/uvc_YYYY-1324px.jpg 1324w, /img/assessments/tiles/uvc_YYYY-1136px.jpg 1136w, /img/assessments/tiles/uvc_YYYY-930px.jpg 930w, /img/assessments/tiles/uvc_YYYY-814px.jpg 814w, /img/assessments/tiles/uvc_YYYY-662px.jpg 662w, /img/assessments/tiles/uvc_YYYY-568px.jpg 568w, /img/assessments/tiles/uvc_YYYY-530px.jpg 530w, /img/assessments/tiles/uvc_YYYY-465px.jpg 465w, /img/assessments/tiles/uvc_YYYY-407px.jpg 407w, /img/assessments/tiles/uvc_YYYY-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="" title=""/><span><!-- title of assessment -->></span></a></div>
 				</section>
-
 			</main>
 			
 			<div data-include="footer"></div>
 
+			<!-- Scroll to top button; adapted from https://www.w3schools.com/howto/howto_js_scroll_to_top.asp -->
 			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" title="Scroll to top" tabindex="0">Top</button>
 		</div>
 
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 		<script>
 			// Includes HTML snippets; adapted from https://stackoverflow.com/a/31837264
-			$(function(){var includes=$('[data-include]');jQuery.each(includes,function(){var file='/common/'+$(this).data('include')+'.html?=newVers_0003';$(this).load(file)})});
-		</script>
-		<script>
-			// Loads JS file only after rest of page has loaded; adapted from https://learn.jquery.com/using-jquery-core/document-ready/ and https://stackoverflow.com/a/39179486
-			$(window).on("load",function(){var element=document.createElement("script");element.src="/js/scripts.js?=newVers_0004";document.body.appendChild(element)});			
+			$(function(){var includes=$('[data-include]');jQuery.each(includes,function(){var file='/common/'+$(this).data('include')+'.html?=newVers_0004';$(this).load(file)})});
+			// Loads JS file only after rest of page has loaded; adapted from https://learn.jquery.com/using-jquery-core/document-ready/ and https://stackoverflow.com/a/39179486, then improved with ChatGPT (https://chat.openai.com/chat)
+			$(document).ready(function(){loadScript("/js/scripts.js?=newVers_0004")});function loadScript(src){var script=document.createElement("script");script.src=src;document.body.appendChild(script)}
 		</script>		
 	</body>
 </html>
