--- a/html/syllabi/jewish_british.html
+++ b/html/syllabi/jewish_british.html
@@ -132,7 +132,7 @@
 				<section aria-labelledby="biography">
 					<h3 id="biography">Developer Biography</h3>
 					
-					<p>Alyssa Quinn Johnson is a Ph.D. candidate in English literature at Texas Christian University, where she is preparing to defend her dissertation on Gothicized depictions of Protestant fanatics in nineteenth-century British fiction. Her research interests lie at the intersection of religion and the Gothic in long-nineteenth-century British fiction.</p>
+					<p>Alyssa Quinn Johnson completed her Ph.D. in English at Texas Christian University, where her dissertation discussed Gothicized depictions of Protestant fanatics in nineteenth-century British fiction. Her research interests lie at the intersection of religion and the Gothic in long-nineteenth-century British fiction.</p>
 				</section>
 
 				<section aria-labelledby="caption">
