add small class to caption section

--- a/html/lesson_plans/africa_archival_erasure.html
+++ b/html/lesson_plans/africa_archival_erasure.html
@@ -178,7 +178,7 @@
 					<p>Sophia Hsu, Ph.D. (Assistant Professor of English, Lehman College, CUNY) teaches a range of courses, covering such topics as nineteenth-century British literature, the novel, and the medical humanities. Her current book project focuses on the Victorian novel and its relation to histories and theories of the population. Research from this and other related projects has been published or is forthcoming in <em>SEL Studies in English Literature, 1500-1900</em>, <em>Dickens Studies Annual</em>, <em>Victorian Review</em>, and <em>English Language Notes</em>.</p>
 				</section>
 
-				<section aria-labelledby="caption">
+				<section class="small"  aria-labelledby="caption">
 					<h3 id="caption">Header Image Caption</h3>
 
 					<p>Joseph Mallord William Turner. <a aria-label="External Link" href="https://collections.mfa.org/objects/31102"><em>Slave Ship (Slavers Throwing Overboard the Dead and Dying, Typhoon Coming On)</em></a>. 1840. The Beal Gallery (Gallery 251), 99.22. Public domain.</p>
