--- a/html/lesson_plans/east_asia_transimperial_introduction.html
+++ b/html/lesson_plans/east_asia_transimperial_introduction.html
@@ -114,7 +114,7 @@
 					<p>The exception to the above is in the naming and citing of creators of East Asian descent with Western names (e.g., Lydia Liu), those who have chosen to accord with Western naming conventions (e.g., Shu-mei Shih), and those who originally wrote in English (e.g., Nitobe Inazo). With these individuals, UVC has abided by Western bibliographic practices that use a comma to separate the surname and given name in citations. UVC has adopted these guidelines after consulting scholarship from East Asian Studies.</p>
 				</section>		
 
-				<section aria-labelledby="caption">
+				<section class="small"  aria-labelledby="caption">
 					<h3 id="caption">Header Image Caption</h3>
 
 					<p>Anonymous. “Korean Cheonhado Map.” Seventeenth-eighteeenth century. Ricci Institute for Chinese-Western Cultural History, Boston College. Courtesy of the Ricci Institute for Chinese-Western Cultural History, Boston College.</p>
