--- a/html/syllabi/canon_fodder.html
+++ b/html/syllabi/canon_fodder.html
@@ -119,7 +119,7 @@
 					<p >Jacob Romanow (Ph.D., Rutgers University '22) will begin as Visiting Assistant Professor of English at Bryn Mawr College in fall 2022. His book project considers exteriority as a principle of literary genre, individual privacy, and imperial management in nineteenth-century British fiction and culture. His work has been published or is forthcoming in <em>ELH</em>, <em>Essays in Romanticism</em>, <em>The Palgrave Encyclopedia of Victorian Women's Writing</em>, <em>Politics/Letters</em>, and elsewhere.</p>
 				</section>
 
-				<section aria-labelledby="caption">
+				<section class="small"  aria-labelledby="caption">
 					<h3 id="caption">Header Image Caption</h3>
 
 					<p>jarmoluk. [<a aria-label="External Link" href="https://pixabay.com/photos/library-books-bookcases-bookshelves-488690/">Untitled Photograph</a>]. 15 Oct. 2014. Pixabay. <a aria-label="External Link" href="https://pixabay.com/service/license/">Pixabay License</a>.</p>
