--- a/html/syllabi/reintroducing_victorians.html
+++ b/html/syllabi/reintroducing_victorians.html
@@ -125,7 +125,7 @@
 					<p>Priyanka Anne Jacob is Assistant Professor of English at Loyola University Chicago. Her articles have appeared in <em>Victorian Studies</em> and <em>Victorian Literature and Culture</em>. She is currently completing a book on informational clutter, storage, and the novel form. Her article "The Pocket-book and the Pigeon-hole: <em>Lady Audley’s Secret</em> and the Files of Victorian Fiction" received the Honorable Mention for the 2019 Donald Gray Prize.</p>
 				</section>
 
-				<section aria-labelledby="caption">
+				<section class="small"  aria-labelledby="caption">
 					<h3 id="caption">Header Image Caption</h3>
 
 					<p>Sims, G. R., editor. “<a aria-label="External Link" href="https://www.bl.uk/collection-items/photograph-of-the-interior-of-the-ayahs-home-in-hackney">In the Ayah’s Home (Hackney)</a>.” <em>Living London: Its Work and Its Play, Its Humour and Its Pathos, Its Sights and Its Scenes</em>, Cassell & Co, 1904. British Library, General Reference Collection 10349.h.12. Public domain.</p>
