--- a/html/syllabi/unsettling_victorian.html
+++ b/html/syllabi/unsettling_victorian.html
@@ -126,7 +126,7 @@
 						<p>Margaret Linley is Associate Professor of English at Simon Fraser University, where she teaches Victorian literature and culture and literary theory. Her publications have appeared in <em>Victorian Studies</em>, <em>Victorian Review, European Romantic Review</em>, <em>Debates in the Digital Humanities,</em> <em>Blackwell Encyclopedia of Victorian Literature</em>, and <em>Transport in British Fiction: Technologies of Movement, 1840–1930</em>. She is co-editor of <em>Media, Technology, and Literature in the Nineteenth Century: Image, Sound, Touch</em>.</p>
 					</section>
 
-					<section aria-labelledby="caption">
+					<section class="small"  aria-labelledby="caption">
 						<h3 id="caption">Header Image Caption</h3>
 
 						<p><a aria-label="External Link" href="https://digital.lib.sfu.ca/pfp-22097/msc130-1106701"><em>The Lions and Brockton Point, Stanley Park</em></a>. n.d. Simon Frazer University Digitized Collections, MSC130-11067.</p>
