--- a/html/syllabi/victorian_human.html
+++ b/html/syllabi/victorian_human.html
@@ -116,7 +116,7 @@
 					<p>Ava Bindas is a Ph.D. candidate in English with an emphasis in Feminist Theory and Research at the University of California Davis. She is writing a dissertation about the uses of women’s ordinary, queer practices in Victorian novels of the recent past. She teaches in the University Writing Program and serves in multiple administrative capacities that seek to mitigate and obviate precarity for graduate students.</p>
 				</section>
 
-				<section aria-labelledby="caption">
+				<section class="small"  aria-labelledby="caption">
 					<h3 id="caption">Header Image Caption</h3>
 
 					<p>Hawkins, Benjamin Waterhouse. “<a aria-label="External Link" href="https://archive.org/details/evidenceastomans63thom">Skeletons of the Gibbon. Orang. Chimpanzee. Gorilla. Man.</a>” <em>Evidence as to Man’s Place in Nature</em>, by Thomas Henry Huxley, Williams and Norgate, 1863, frontispiece. Public domain.</p>
