--- a/py/syllabus-template-1.html
+++ b/py/syllabus-template-1.html
@@ -101,7 +101,7 @@
 					<p>{biography}</p>
 				</section>
 
-				<section aria-labelledby="caption">
+				<section class="small"  aria-labelledby="caption">
 					<h3 id="caption">Header Image Caption</h3>
 
 					<p>{header-image-caption}</p>
