--- a/0_dev/templates+workflows/template_lesson-plan-east-asia.html
+++ b/0_dev/templates+workflows/template_lesson-plan-east-asia.html
@@ -120,7 +120,7 @@
 
 					</section>
 
-					<section aria-labelledby="caption">
+					<section class="small"  aria-labelledby="caption">
 						<h3 id="caption">Header Image Caption</h3>
 
 					</section>
