--- a/html/lesson_plans/africa_dramatic_monologue.html
+++ b/html/lesson_plans/africa_dramatic_monologue.html
@@ -313,7 +313,7 @@
 					<p><a aria-label="External Link" href="https://mk7kf.github.io/">Cherrie Kwok</a> is a Ph.D. candidate and an Elizabeth Arendall Tilney and Schuyler Tilney Jefferson Fellow at the University of Virginia. Her dissertation examines the relationship between Decadent aesthetics and anti-imperial politics through a set of writers from the Black Atlantic, China, and India from the long nineteenth century onwards. Her other interests include global Anglophone literature (especially in the Victorian period), poetry, postcolonial theory, and the digital humanities.</p>
 				</section>
 
-				<section aria-labelledby="caption">
+				<section class="small"  aria-labelledby="caption">
 					<h3 id="caption">Header Image Caption</h3>
 
 					<p>Henry Ossawa Tanner. <a aria-label="External Link" href="https://collections.si.edu/search/detail/edanmdm:saam_1983.95.28?q=record_ID%3Dsaam_1983.95.28&record=1&hlterm=record_ID%3Dsaam_1983.95.28&inline=true"><em>Crossing the Atlantic (Return Home)</em></a>. 1894. The Smithsonian Institution. Used for education consistent with the principles of fair use under Section 108 of the U.S. Copyright Act.</p>
