--- a/html/lesson_plans/east_asia_chinese_migration.html
+++ b/html/lesson_plans/east_asia_chinese_migration.html
@@ -368,7 +368,7 @@
 					<p>Jessica R. Valdez is a lecturer in literature of the long global nineteenth century at the University of East Anglia. She is currently working on a book manuscript tentatively called, <em>Despots and Democrats: China and America in British Literature, 1834-1901</em>. Her first monograph, <em>Plotting the News in Victorian Literature </em>(EUP 2020), analyzes competing understandings of national identity in nineteenth-century novels and the newspaper press. <em>Plotting the News</em> demonstrates that Victorian novelists functioned as early media theorists as they thought through the overlapping systems of reality offered by newspapers and novels. She previously worked at the University of Hong Kong.</p>
 				</section>
 
-				<section aria-labelledby="caption">
+				<section class="small"  aria-labelledby="caption">
 					<h3 id="caption">Header Image Caption</h3>
 
 					<p>Anonymous. “<a aria-label="External Link" href="https://commons.wikimedia.org/wiki/File:Hong_Kong_and_Victoria_Peak_Circa_1855.jpg">Hong Kong and Victoria Peak Circa 1855.</a>” c.1855. <em>Wikimedia Commons</em>. Public domain.</p>
