--- a/html/lesson_plans/east_asia_psychoactive_revolution.html
+++ b/html/lesson_plans/east_asia_psychoactive_revolution.html
@@ -252,7 +252,7 @@
 					<p>Menglu Gao is an Assistant Professor of Victorian Literature at the University of Denver. She specializes in nineteenth-century British and Anglophone literature, with research interests in medical humanities, empire studies, Anglo-Chinese transnational studies, and critical theory. Her current book project examines how medical theories relevant to opium use and addiction provided new ways for nineteenth-century authors to imagine the structure of the British empire. Her work has appeared in <em>Literature and Medicine</em>.</p>
 				</section>
 
-				<section aria-labelledby="caption">
+				<section class="small"  aria-labelledby="caption">
 					<h3 id="caption">Header Image Caption</h3>
 
 					<p>Anonymous. “<a aria-label="External Link" href="https://commons.wikimedia.org/wiki/File:Destruction_of_opium_in_1839.jpg">Commissioner Lin and the Destruction of the Opium in 1839.</a>” c.1840. <em>Wikimedia Commons</em>. Public domain.</p>
