--- a/html/syllabi/jewish_british.html
+++ b/html/syllabi/jewish_british.html
@@ -135,7 +135,7 @@
 					<p>Alyssa Quinn Johnson completed her Ph.D. in English at Texas Christian University, where her dissertation discussed Gothicized depictions of Protestant fanatics in nineteenth-century British fiction. Her research interests lie at the intersection of religion and the Gothic in long-nineteenth-century British fiction.</p>
 				</section>
 
-				<section aria-labelledby="caption">
+				<section class="small"  aria-labelledby="caption">
 					<h3 id="caption">Header Image Caption</h3>
 
 					<p><p>Carpenter, Shawn. “<a aria-label="External Link" href="https://www.flickr.com/photos/spcbrass/4744175365/in/photostream/">Candle</a>.” 28 June 2010. <em>Flickr</em>. <a aria-label="External Link" href="https://creativecommons.org/licenses/by-sa/2.0/">Creative Commons Attribution-ShareAlike 2.0 Generic (CC BY-SA 2.0)</a></p></p>
