--- a/html/syllabi/muslim_other.html
+++ b/html/syllabi/muslim_other.html
@@ -139,7 +139,7 @@
 					<p>Dana Aicha Shaaban is a Ph.D. candidate in English literature at Texas Christian University, where she is preparing to defend her dissertation “The Influence of Shahrazad, the female ‘Hakawati’ of <em>The Arabian Nights</em> on Victorian Children’s Literature.” Her research interests include British literature of the long nineteenth century, children’s literature of the Victorian era, global literatures, and postcolonial literatures. She just received Honorable Mention for the 2022-2023 Walter L. Arnstein Prize for Dissertation Research in Victorian Studies.</p>
 				</section>
 
-				<section aria-labelledby="caption">
+				<section class="small"  aria-labelledby="caption">
 					<h3 id="caption">Header Image Caption</h3>
 
 					<p><p>(Left) Boudewijn Huysmans. [<a aria-label="External Link" href="https://unsplash.com/photos/J82Go1HjKPQ">Hand-Painted Illustration</a>]. 18 Oct. 2020. <em>Unsplash</em>. <a aria-label="External Link" href="https://unsplash.com/license">Unsplash License</a>. <em>Full Title: Hand-painted illustration from probably a book about Islam. Most likely well over 100 years old.</em></p>
