--- a/html/syllabi/race_slavery_empire.html
+++ b/html/syllabi/race_slavery_empire.html
@@ -125,7 +125,7 @@
 					<p>Anna Feuerstein is an Associate Professor of English at the University of Hawai'i-Mānoa. She is the author of <em>The Political Lives of Victorian Animals: Liberal Creatures in Literature and Culture</em> (Cambridge 2019) and is currently writing a book on the racialization of human-animal relationships within the cultural histories of British slavery and empire. Her recent publications on slavery and empire have appeared in <em>Qui Parle</em> and <em>Nineteenth-Century Gender Studies</em>. In 2019, she was awarded the Presidential Citation for Excellence in Teaching award.</p>
 				</section>
 
-				<section aria-labelledby="caption">
+				<section class="small"  aria-labelledby="caption">
 					<h3 id="caption">Header Image Caption</h3>
 
 					<p>(Left) Ramsay, Allan. “<a aria-label="External Link" href="https://commons.wikimedia.org/wiki/File:Portrait_of_an_African.jpg">Portrait of an African</a>” [Ignatius Sancho Aka Olaudah Equiano]. <em>Wikimedia Common</em>, 1757. Royal Albert Memorial Museum, 14/1943. Public domain.</p>
