--- a/html/syllabi/uvc_india_jude.html
+++ b/html/syllabi/uvc_india_jude.html
@@ -121,7 +121,7 @@
 					<p>Shantanu Majee is an early career academician from Kolkata, currently employed as Assistant Professor in the Department of English at Techno India University, West Bengal. He received his M.Phil. and Ph.D. in Nineteenth-Century Studies at Jadavpur University, Kolkata. His work has been published in <em>The Palgrave Encyclopedia of Victorian Women's Writing</em>, <em>British Association for Victorian Studies</em>, and the <em>Australasian Journal of Victorian Studies</em> and is forthcoming in <em>Essays and Studies</em>, <em>Journal of Victorian Culture</em>, <em>International Routledge Volume on Ageing Bodies</em>, <em>Ageist Culture: Growing Older in India</em>, and the <em>Brill Handbook for Indian Memory Studies</em>. He is also currently working on a book called <em>Translating Nineteenth Century European Classics in Indian Vernacular Languages</em>.</p>
 				</section>
 
-				<section aria-labelledby="caption">
+				<section class="small"  aria-labelledby="caption">
 					<h3 id="caption">Header Image Caption</h3>
 
 					<p>Ghosh, Gourav. <a aria-label="External Link" href="https://commons.wikimedia.org/wiki/File:Jadavpur_University_Gate_No._4.jpg">The Entry to the Arts Faculty of Jadavpur University</a>. 3 Dec. 2011. Wikimedia Commons. <a aria-label="External Link" href="https://creativecommons.org/licenses/by-sa/3.0">CC BY-SA 3.0</a>.</p>
