--- a/html/syllabi/women_write_empire.html
+++ b/html/syllabi/women_write_empire.html
@@ -125,7 +125,7 @@
 					<p>Amy Kahrmann Huseby is Assistant Teaching Professor of English at Florida International University, where she teaches nineteenth-century British literature and culture. Her publications have appeared in <em>Victorian Poetry</em>, <em>Victorian Periodicals Review</em>, <em>Nineteen-Century Literature</em>, <em>Women’s Writing</em>, <em>South Atlantic Review</em>, and several edited collections. She is co-editor of <em>Defining Pre-Raphaelite Poetics </em>(Palgrave Macmillan 2020), Reviews Editor for <em>Victoriographies</em> (Edinburgh University Press), and the founder of the Victorian Poetry Caucus at NAVSA.</p>						
 				</section>
 
-				<section aria-labelledby="caption">
+				<section class="small"  aria-labelledby="caption">
 					<h3 id="caption">Header Image Caption</h3>
 
 					<p>(Left) “<a aria-label="External Link" href="https://archive.org/details/lifelettersoftor00duttuoft">Toru Dutt</a>.” <em>Life and Letters of Toru Dutt</em>, by Toru Dutt and Harihar Das, Humphrey Milford; Oxford University Press, 1921, frontispiece.</p>
