u assess/syl template

--- a/py/syllabus-template-1.html
+++ b/py/syllabus-template-1.html
@@ -92,13 +92,13 @@
 				<section aria-labelledby="series">
 					<h3 id="series">{cluster-title} Series</h3>
 
-					<p>{cluster-description}</p>
+					{cluster-description}
 				</section>
 
 				<section aria-labelledby="biography">
 					<h3 id="biography">Developer Biography</h3>
 					
-					<p>{biography}</p>
+					{biography}
 				</section>
 
 				<section class="small"  aria-labelledby="caption">
