--- a/py/assessment-template-1.html
+++ b/py/assessment-template-1.html
@@ -57,7 +57,7 @@
 						
 						<p><strong>Webpage Developer:</strong> {webpage-dev} <a class="mail" href="mailto:{webpage-dev-email}?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></p><!-- Change -->
 
-						<p><strong>Associated Assessment(s):</strong> {associated-assessment-author}, <a href="/html/assessments/{associated-assessment-file-name}.html">{associated-assessments}</a></p><!-- Change -->
+						<p><strong>Associated Assessment(s):</strong> {associated-assessment-author}, <a href="/html/assessments/{associated-assessment-file-name}.html">{associated-assessment}</a></p><!-- Change -->
 
 						<p><strong>Cluster Title:</strong> {cluster-title}</p><!-- Change -->
 
