u assess/syl template

--- a/py/syllabus-template-1.html
+++ b/py/syllabus-template-1.html
@@ -104,7 +104,7 @@
 				<section class="small"  aria-labelledby="caption">
 					<h3 id="caption">Header Image Caption</h3>
 
-					<p>{header-image-caption}</p>
+					{header-image-caption}
 				</section>
 				
 				<section class="small" aria-labelledby="citation">
