--- a/py/syllabus-template-1.html
+++ b/py/syllabus-template-1.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8"/>
     <title>{title} | Undisciplining the Victorian Classroom</title><!-- Change -->
-		<meta name="description" content="{description}."/><!-- Change; 160 char max -->
+		<meta name="description" content="{description}"/><!-- Change; 160 char max -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
 		<meta name="theme-color" content="#395375"/>
