--- a/0_dev/Annotated-HTML-Code.html
+++ b/0_dev/Annotated-HTML-Code.html
@@ -34,7 +34,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&family=Source+Sans+Pro:wght@400;600;700&display=swap"/>
 
 <!-- Load external CSS stylesheets from Fork Awesome and Font Awesome -->
-<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.2.0/css/fork-awesome.min.css" integrity="sha256-XoaMnoYC5TH6/+ihMEnospgm0J1PM/nioxbOUdnM8HY=" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fork-awesome/1.2.0/css/fork-awesome.min.css" integrity="sha512-aupidr80M36SeyviA/hZ2uEPnvt2dTJfyjm9y6z1MgaV13TgzmDiFdsH3cvSNG27mRIj7gJ2gNeg1HeySJyE3Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <link rel="stylesheet"  type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-1cae5f80b04bfb1bba766fc88b7cf8c619525326604d3f6db9cfe14abb70eaecc93af811af66bd8f2c714f57a5cbe07ec4502624a5524dba4cfc2b8beeac4ef3" crossorigin="anonymous"  referrerpolicy="no-referrer"/>
 
 <!-- Loads an internal CSS stylesheet -->
