--- a/html/about/assistant_editors.html
+++ b/html/about/assistant_editors.html
@@ -23,7 +23,7 @@
 	<!-- HTML code in this file adapted from Adrian S. Wisnicki's One More Voice website (https://onemorevoice.org/); released under a Creative Commons Attribution-NonCommercial 4.0 International (CC BY-NC 4.0) license (https://creativecommons.org/licenses/by-nc/4.0/). -->
 
 	<body class="essay">
-		<div class="text-container content about founders">
+		<div class="text-container content about editors">
 
 			<div data-include="nav">
 				<nav id="fallback-nav">
@@ -36,8 +36,8 @@
 
 			<header id="header"></header>
 
-			<main id="main" aria-labelledby="founders">
-				<h2 id="founders">Assistant Editors</h2>
+			<main id="main" aria-labelledby="assistant-editors">
+				<h2 id="assistant-editors">Assistant Editors</h2>
 				<div class="aspect-ratio-box">
 					<img src="/img/about/uvc_0053-1500px.jpg" srcset="/img/about/uvc_0053-1500px.jpg 1500w, /img/about/uvc_0053-1350px.jpg 1350w, /img/about uvc_0053-1200px.jpg 1200w, /img/about/uvc_0053-1050px.jpg 1050w, /img/about/uvc_0053-900px.jpg 900w, /img/about/uvc_0053-750px.jpg 750w, /img/about/uvc_0053-600px.jpg 600w, /img/about/uvc_0053-450px.jpg 450w, /img/about/uvc_0053-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Work of cotton and silk: purple, white, and black in repeating linear patterns." title="Anonymous Yoruba Artist. Shawl (Aso Oke). [nineteenth century], https://www.metmuseum.org/art/collection/search/321217?searchField=All&amp;sortBy=relevance&amp;when=A.D.+1800-1900&amp;where=Africa&amp;what=Textiles&amp;showOnly=openAccess&amp;ft=*&amp;offset=0&amp;rpp=40&amp;pos=2. The Metropolitan Museum of Art, New York, 2012.335. Creative Commons Zero 1.0 Universal (CC0 1.0). Public Domain Dedication. https://creativecommons.org/publicdomain/zero/1.0/. Purchase, Mrs. Howard J. Barnet Gift, 2012. Purchase, Mrs. Howard J. Barnet Gift, 2012."/>
 					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
