--- a/index.html
+++ b/index.html
@@ -69,23 +69,23 @@
 							<!-- Item #1 -->
 							<div class="carousel-item active" role="group" aria-roledescription="slide" aria-label="1 of 9">
 								<div class="carousel-image">
-										<img src="/img/home/uvc_0061-1200px.jpg" srcset="/img/home/uvc_0061-1800px.jpg 1800w, /img/home/uvc_0061-1650px.jpg 1650w, /img/home/uvc_0061-1500px.jpg 1500w, /img/home/uvc_0061-1350px.jpg 1350w, /img/home/uvc_0061-1200px.jpg 1200w, /img/home/uvc_0061-1050px.jpg 1050w, /img/home/uvc_0061-900px.jpg 900w, /img/home/uvc_0061-750px.jpg 750w, /img/home/uvc_0061-600px.jpg 600w, /img/home/uvc_0061-450px.jpg 450w, /img/home/uvc_0061-300px.jpg 300w" sizes="(min-width: 1340px) 898px, (min-width: 1040px) calc(51.43vw + 219px), (min-width: 780px) calc(17.08vw + 565px), (min-width: 340px) calc(89.52vw + 18px), calc(515vw - 1346px)" alt="Group of of people, one on a horse, with trees, green landscape, hills, and mountain in background." style="object-position: 50% 50%;"/>
+										<img src="/img/home/uvc_0061-1200px.jpg" srcset="/img/home/uvc_0061-1800px.jpg 1800w, /img/home/uvc_0061-1650px.jpg 1650w, /img/home/uvc_0061-1500px.jpg 1500w, /img/home/uvc_0061-1350px.jpg 1350w, /img/home/uvc_0061-1200px.jpg 1200w, /img/home/uvc_0061-1050px.jpg 1050w, /img/home/uvc_0061-900px.jpg 900w, /img/home/uvc_0061-750px.jpg 750w, /img/home/uvc_0061-600px.jpg 600w, /img/home/uvc_0061-450px.jpg 450w, /img/home/uvc_0061-300px.jpg 300w" sizes="(min-width: 1340px) 898px, (min-width: 1040px) calc(51.43vw + 219px), (min-width: 780px) calc(17.08vw + 565px), (min-width: 340px) calc(89.52vw + 18px), calc(515vw - 1346px)" alt="Group of of people, one on a horse, with trees, green landscape, hills, and mountain in background." style="object-position: 50% 0%;"/>
 								</div>
 								<div class="carousel-caption">
 									<p><a href="#utagawa-hiroshige" id="carousel-label-1">Utagawa Hiroshige, “The Famous Sight of Mount Fuji on the Left,” c.1847/52</a></p>
 								</div>
 							</div>
 							<!-- Item #2 -->							
-							<div class="carousel-item active" role="group" aria-roledescription="slide" aria-label="2 of 9">
+							<div class="carousel-item" role="group" aria-roledescription="slide" aria-label="2 of 9">
 								<div class="carousel-image">
-										<img src="/img/home/uvc_0062-1200px.jpg" srcset="/img/home/uvc_0062-1800px.jpg 1800w, /img/home/uvc_0062-1650px.jpg 1650w, /img/home/uvc_0062-1500px.jpg 1500w, /img/home/uvc_0062-1350px.jpg 1350w, /img/home/uvc_0062-1200px.jpg 1200w, /img/home/uvc_0062-1050px.jpg 1050w, /img/home/uvc_0062-900px.jpg 900w, /img/home/uvc_0062-750px.jpg 750w, /img/home/uvc_0062-600px.jpg 600w, /img/home/uvc_0062-450px.jpg 450w, /img/home/uvc_0062-300px.jpg 300w" sizes="(min-width: 1340px) 898px, (min-width: 1040px) calc(51.43vw + 219px), (min-width: 780px) calc(17.08vw + 565px), (min-width: 340px) calc(89.52vw + 18px), calc(515vw - 1346px)" alt="Rosy milkweed vine/asclepias rosea laid out in a circular pattern." style="object-position: 50% 50%;"/>
+										<img src="/img/home/uvc_0062-1200px.jpg" srcset="/img/home/uvc_0062-1800px.jpg 1800w, /img/home/uvc_0062-1650px.jpg 1650w, /img/home/uvc_0062-1500px.jpg 1500w, /img/home/uvc_0062-1350px.jpg 1350w, /img/home/uvc_0062-1200px.jpg 1200w, /img/home/uvc_0062-1050px.jpg 1050w, /img/home/uvc_0062-900px.jpg 900w, /img/home/uvc_0062-750px.jpg 750w, /img/home/uvc_0062-600px.jpg 600w, /img/home/uvc_0062-450px.jpg 450w, /img/home/uvc_0062-300px.jpg 300w" sizes="(min-width: 1340px) 898px, (min-width: 1040px) calc(51.43vw + 219px), (min-width: 780px) calc(17.08vw + 565px), (min-width: 340px) calc(89.52vw + 18px), calc(515vw - 1346px)" alt="Rosy milkweed vine/asclepias rosea laid out in a circular pattern." style="object-position: 50% 30%;"/>
 								</div>
 								<div class="carousel-caption">
 									<p><a href="#anonymous-a" id="carousel-label-2">Anon., “Rosy Milkweed Vine/Asclepias Rosea,” late eighteenth century</a></p>
 								</div>
 							</div>
 							<!-- Item #3 -->							
-							<div class="carousel-item active" role="group" aria-roledescription="slide" aria-label="3 of 9">
+							<div class="carousel-item" role="group" aria-roledescription="slide" aria-label="3 of 9">
 								<div class="carousel-image">
 										<img src="/img/home/uvc_0063-1200px.jpg" srcset="/img/home/uvc_0063-1800px.jpg 1800w, /img/home/uvc_0063-1650px.jpg 1650w, /img/home/uvc_0063-1500px.jpg 1500w, /img/home/uvc_0063-1350px.jpg 1350w, /img/home/uvc_0063-1200px.jpg 1200w, /img/home/uvc_0063-1050px.jpg 1050w, /img/home/uvc_0063-900px.jpg 900w, /img/home/uvc_0063-750px.jpg 750w, /img/home/uvc_0063-600px.jpg 600w, /img/home/uvc_0063-450px.jpg 450w, /img/home/uvc_0063-300px.jpg 300w" sizes="(min-width: 1340px) 898px, (min-width: 1040px) calc(51.43vw + 219px), (min-width: 780px) calc(17.08vw + 565px), (min-width: 340px) calc(89.52vw + 18px), calc(515vw - 1346px)" alt="Textile in brown, beige, gray, and black grid pattern overlaid by an X." style="object-position: 50% 50%;"/>
 								</div>
@@ -94,25 +94,25 @@
 								</div>
 							</div>
 							<!-- Item #4 -->							
-							<div class="carousel-item active" role="group" aria-roledescription="slide" aria-label="4 of 9">
+							<div class="carousel-item" role="group" aria-roledescription="slide" aria-label="4 of 9">
 								<div class="carousel-image">
-										<img src="/img/home/uvc_0064-1200px.jpg" srcset="/img/home/uvc_0064-1800px.jpg 1800w, /img/home/uvc_0064-1650px.jpg 1650w, /img/home/uvc_0064-1500px.jpg 1500w, /img/home/uvc_0064-1350px.jpg 1350w, /img/home/uvc_0064-1200px.jpg 1200w, /img/home/uvc_0064-1050px.jpg 1050w, /img/home/uvc_0064-900px.jpg 900w, /img/home/uvc_0064-750px.jpg 750w, /img/home/uvc_0064-600px.jpg 600w, /img/home/uvc_0064-450px.jpg 450w, /img/home/uvc_0064-300px.jpg 300w" sizes="(min-width: 1340px) 898px, (min-width: 1040px) calc(51.43vw + 219px), (min-width: 780px) calc(17.08vw + 565px), (min-width: 340px) calc(89.52vw + 18px), calc(515vw - 1346px)" alt="Set of four people, one of whom kneels and offers a bowl to another; with tree with white flowers." style="object-position: 50% 50%;"/>
+										<img src="/img/home/uvc_0064-1200px.jpg" srcset="/img/home/uvc_0064-1800px.jpg 1800w, /img/home/uvc_0064-1650px.jpg 1650w, /img/home/uvc_0064-1500px.jpg 1500w, /img/home/uvc_0064-1350px.jpg 1350w, /img/home/uvc_0064-1200px.jpg 1200w, /img/home/uvc_0064-1050px.jpg 1050w, /img/home/uvc_0064-900px.jpg 900w, /img/home/uvc_0064-750px.jpg 750w, /img/home/uvc_0064-600px.jpg 600w, /img/home/uvc_0064-450px.jpg 450w, /img/home/uvc_0064-300px.jpg 300w" sizes="(min-width: 1340px) 898px, (min-width: 1040px) calc(51.43vw + 219px), (min-width: 780px) calc(17.08vw + 565px), (min-width: 340px) calc(89.52vw + 18px), calc(515vw - 1346px)" alt="Set of four people, one of whom kneels and offers a bowl to another; with tree with white flowers." style="object-position: 50% 45%;"/>
 								</div>
 								<div class="carousel-caption">
 									<p><a href="#anonymous-b" id="carousel-label-4">Anon., “Wine Drinking in a Spring Garden,” c.1430</a></p>
 								</div>
 							</div>
 							<!-- Item #5 -->							
-							<div class="carousel-item active" role="group" aria-roledescription="slide" aria-label="5 of 9">
+							<div class="carousel-item" role="group" aria-roledescription="slide" aria-label="5 of 9">
 								<div class="carousel-image">
-										<img src="/img/home/uvc_0065-1200px.jpg" srcset="/img/home/uvc_0065-1800px.jpg 1800w, /img/home/uvc_0065-1650px.jpg 1650w, /img/home/uvc_0065-1500px.jpg 1500w, /img/home/uvc_0065-1350px.jpg 1350w, /img/home/uvc_0065-1200px.jpg 1200w, /img/home/uvc_0065-1050px.jpg 1050w, /img/home/uvc_0065-900px.jpg 900w, /img/home/uvc_0065-750px.jpg 750w, /img/home/uvc_0065-600px.jpg 600w, /img/home/uvc_0065-450px.jpg 450w, /img/home/uvc_0065-300px.jpg 300w" sizes="(min-width: 1340px) 898px, (min-width: 1040px) calc(51.43vw + 219px), (min-width: 780px) calc(17.08vw + 565px), (min-width: 340px) calc(89.52vw + 18px), calc(515vw - 1346px)" alt="Wood four legged, twelve hole gameboard with end cup." style="object-position: 50% 50%;"/>
+										<img src="/img/home/uvc_0065-750px.jpg" srcset="/img/home/uvc_0065-750px.jpg 750w, /img/home/uvc_0065-600px.jpg 600w, /img/home/uvc_0065-450px.jpg 450w, /img/home/uvc_0065-300px.jpg 300w" sizes="(min-width: 1340px) 898px, (min-width: 1040px) calc(51.43vw + 219px), (min-width: 780px) calc(17.08vw + 565px), (min-width: 340px) calc(89.52vw + 18px), calc(515vw - 1346px)" alt="Wood four legged, twelve hole gameboard with end cup." style="object-position: 50% 70%;"/>
 								</div>
 								<div class="carousel-caption">
 									<p><a href="#anonymous-dan" id="carousel-label-5">Anon. Dan Artist, “Gameboard,” late nineteenth/early twentieth century</a></p>
 								</div>
 							</div>
 							<!-- Item #6 -->							
-							<div class="carousel-item active" role="group" aria-roledescription="slide" aria-label="6 of 9">
+							<div class="carousel-item" role="group" aria-roledescription="slide" aria-label="6 of 9">
 								<div class="carousel-image">
 										<img src="/img/home/uvc_0003-1200px.jpg" srcset="/img/home/uvc_0003-1800px.jpg 1800w, /img/home/uvc_0003-1650px.jpg 1650w, /img/home/uvc_0003-1500px.jpg 1500w, /img/home/uvc_0003-1350px.jpg 1350w, /img/home/uvc_0003-1200px.jpg 1200w, /img/home/uvc_0003-1050px.jpg 1050w, /img/home/uvc_0003-900px.jpg 900w, /img/home/uvc_0003-750px.jpg 750w, /img/home/uvc_0003-600px.jpg 600w, /img/home/uvc_0003-450px.jpg 450w, /img/home/uvc_0003-300px.jpg 300w" sizes="(min-width: 1340px) 898px, (min-width: 1040px) calc(51.43vw + 219px), (min-width: 780px) calc(17.08vw + 565px), (min-width: 340px) calc(89.52vw + 18px), calc(515vw - 1346px)" alt="Demon, resembling a lion, attacking a green-skinned man who leans back in avoidance." style="object-position: 50% 0;"/>
 								</div>
@@ -209,7 +209,7 @@
 
 							<p id="anonymous-a"><em>Slide #2</em>: Anonymous. <a aria-label="External Link" href="https://www.metmuseum.org/art/collection/search/761737"><em>Rosy Milkweed Vine/Asclepias Rosea</em></a>. [late eighteenth century]. The Metropolitan Museum of Art, New York, 2017.385. Gift of Mr. and Mrs. Kamran Anwar, in loving memory of Mr. Anwarullah Khan and Amjad Rashid, 2017. Public domain.</p>
 
-							<p id="anonymous-samoan"><em>Slide #3</em>: Anonymous Samoan Artist. <a aria-label="External Link" href="https://collections.tepapa.govt.nz/object/165397">Siapo (Tapa Cloth)</a>. [c.1917]. Museum of New Zealand | Te Papa Tongarewa, FE001416. Gift of Thomas Trood, 1917. <a aria-label="External Link" href="https://www.tepapa.govt.nz/discover-collections/collections-online/about-collections-online#no-known-copyright">No known copyright restrictions</a>.</p>
+							<p id="anonymous-samoan"><em>Slide #3</em>: Anonymous Samoan Artist. <a aria-label="External Link" href="https://collections.tepapa.govt.nz/object/165397">Siapo (Tapa Cloth)</a>. [c.1917]. Museum of New Zealand | Te Papa Tongarewa, Te Papa (FE001416). Gift of Thomas Trood, 1917. <a aria-label="External Link" href="https://www.tepapa.govt.nz/discover-collections/collections-online/about-collections-online#no-known-copyright">No known copyright restrictions</a>.</p>
 							
 							<p id="anonymous-b"><em>Slide #4</em>: Anonymous. <a aria-label="External Link" href="https://www.metmuseum.org/art/collection/search/451403">Wine Drinking in a Spring Garden</a>. [c.1430]. The Metropolitan Museum of Art, New York, 57.51.24. Cora Timken Burnett Collection of Persian Miniatures and Other Persian Art Objects, Bequest of Cora Timken Burnett, 1956. Public domain.</p>
 
