--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
 							<!-- Item #1 -->
 							<div class="carousel-item active" role="group" aria-roledescription="slide" aria-label="1 of 9">
 								<div class="carousel-image">
-										<img src="/img/home/uvc_0061-1200px.jpg" srcset="/img/home/uvc_0061-1800px.jpg 1800w, /img/home/uvc_0061-1650px.jpg 1650w, /img/home/uvc_0061-1500px.jpg 1500w, /img/home/uvc_0061-1350px.jpg 1350w, /img/home/uvc_0061-1200px.jpg 1200w, /img/home/uvc_0061-1050px.jpg 1050w, /img/home/uvc_0061-900px.jpg 900w, /img/home/uvc_0061-750px.jpg 750w, /img/home/uvc_0061-600px.jpg 600w, /img/home/uvc_0061-450px.jpg 450w, /img/home/uvc_0061-300px.jpg 300w" sizes="(min-width: 1340px) 898px, (min-width: 1040px) calc(51.43vw + 219px), (min-width: 780px) calc(17.08vw + 565px), (min-width: 340px) calc(89.52vw + 18px), calc(515vw - 1346px)" alt="Group of of people, one on a horse, with trees, green landscape, hills, and mountain in background." style="object-position: 50% 0%;"/>
+										<img src="/img/home/uvc_0061-1200px.jpg" srcset="/img/home/uvc_0061-1800px.jpg 1800w, /img/home/uvc_0061-1650px.jpg 1650w, /img/home/uvc_0061-1500px.jpg 1500w, /img/home/uvc_0061-1350px.jpg 1350w, /img/home/uvc_0061-1200px.jpg 1200w, /img/home/uvc_0061-1050px.jpg 1050w, /img/home/uvc_0061-900px.jpg 900w, /img/home/uvc_0061-750px.jpg 750w, /img/home/uvc_0061-600px.jpg 600w, /img/home/uvc_0061-450px.jpg 450w, /img/home/uvc_0061-300px.jpg 300w" sizes="(min-width: 1340px) 898px, (min-width: 1040px) calc(51.43vw + 219px), (min-width: 780px) calc(17.08vw + 565px), (min-width: 340px) calc(89.52vw + 18px), calc(515vw - 1346px)" alt="Group of of people crossing a bridge over a river with a group of green hills in background." style="object-position: 50% 0%;"/>
 								</div>
 								<div class="carousel-caption">
-									<p><a href="#utagawa-hiroshige" id="carousel-label-1">Utagawa Hiroshige, “The Famous Sight of Mount Fuji on the Left,” c.1847/52</a></p>
+									<p><a href="#katsushika-hokusai" id="carousel-label-1">Katsushika Hokusai 葛飾 北斎, “Ariwara no Narihira,” 1835-36</a></p>
 								</div>
 							</div>
 							<!-- Item #2 -->							
@@ -205,7 +205,7 @@
 						<section aria-labelledby="new-edition">
 							<h3 class="carousel-image" id="new-edition">New Edition</h3>
 
-							<p id="utagawa-hiroshige"><em>Slide #1</em>: Utagawa Hiroshige 歌川 広重. <a aria-label="External Link" href="https://www.artic.edu/artworks/18290/yoshiwara-the-famous-sight-of-mount-fuji-on-the-left-yoshiwara-meisho-hidari-fuji-no-15-from-the-series-fifty-three-stations-of-the-tokaido-tokaido-gojusan-tsugi-also-known-as-the-reisho-tokaido"><em>Yoshiwara: The Famous Sight of Mount Fuji on the Left (Yoshiwara, Meisho Hidari Fuji) – No. 15, from the Series “Fifty-Three Stations of the Tokaido (Tokaido Gojusan Tsugi),” Also Known as the Reisho Tokaido</em></a>. [c.1847/52]. Art Institute of Chicago, Chicago, 1963.680. Gift of Mr. and Mrs. Harold G. Henderson. <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero 1.0 Universal</a> (CC0 1.0). Public Domain Dedication.</p>
+							<p id="katsushika-hokusai"><em>Slide #1</em>: Katsushika Hokusai 葛飾 北斎. <a aria-label="External Link" href="https://www.artic.edu/artworks/89524/ariwara-no-narihirafrom-the-series-one-hundred-poems-explained-by-the-nurse-hyakunin-isshu-uba-ga-etoki"><em>Ariwara No Narihira – from the Series One Hundred Poems Explained by the Nurse (Hyakunin Isshu Uba Ga Etoki)</em></a>. [1835-36]. Art Institute of Chicago, Chicago, 1928.1094. Clarence Buckingham Collection. <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero 1.0 Universal</a> (CC0 1.0). Public Domain Dedication.</p>
 
 							<p id="anonymous-a"><em>Slide #2</em>: Anonymous. <a aria-label="External Link" href="https://www.metmuseum.org/art/collection/search/761737"><em>Rosy Milkweed Vine/Asclepias Rosea</em></a>. [late eighteenth century]. The Metropolitan Museum of Art, New York, 2017.385. Gift of Mr. and Mrs. Kamran Anwar, in loving memory of Mr. Anwarullah Khan and Amjad Rashid, 2017. Public domain.</p>
 
